# mirari

./: .gitignore  aot_testing.py  cornell_box.py  debug.py  pyproject.toml  test.py
mirari/: __init__.py  brdf.py  camera.py  march.py  material.py  math.py  scenes.py  sdf.py
